# turbot

./: .coveragerc  .dockerignore  .gitignore  CONTRIBUTING.md  DOCKER.md  Dockerfile  HEROKU.md  LICENSE.md  MANIFEST.in  Procfile  README.md  app.json  pyproject.toml  requirements.txt  setup.py  tox.ini  turbot.py
.github/workflows/: ci.yaml
coverage/: README.md
requirements/: common.txt  dev.txt
scripts/: create_db_revision.py  publish.sh  show_requirements.sh  sort_strings.py  update.sh  update_art_assets.py  update_art_data.py  update_bugs_assets.py  update_bugs_data.py  update_fish_assets.py  update_fish_data.py  update_fossils_assets.py  update_songs_assets.py  update_songs_data.py
scripts/migrations/: 000_canonical_songs.py  001_sqlite_db.py
src/turbot/: __init__.py  _version.py  assets.py  data.py
src/turbot/assets/: alembic.ini  art.csv  fish.csv  strings.yaml
src/turbot/data/: art.csv  fish.csv  fossils.csv  songs.csv  strings.yaml
src/turbot/versions/: env.py
src/turbot/versions/versions/: 1afdca2a2389_adds_relationships.py  33940279af35_keep_track_of_authorized_channels_per_.py  9b107d322c46_use_bigint_for_author_ids.py  a5d26dbfc9a3_support_longer_timestamps.py  cb8aa87d74cb_initial_revision.py
src/turnips/: __init__.py  archipelago.py  example.py  markov.py  meta.py  model.py  modifier.py  multi.py  plots.py  price.py  script.py  ttime.py
tests/: test_turbot.py
tests/data/: quotes.txt
tests/snapshots/: test_on_message_about_0.txt  test_on_message_allfossils_0.txt  test_on_message_art_correctnames_0.txt  test_on_message_art_fulllist_0.txt  test_on_message_art_invalidnames_0.txt  test_on_message_artcount_0.txt  test_on_message_artcount_bad_name_0.txt  test_on_message_artcount_no_art_0.txt  test_on_message_artcount_no_fossils_0.txt  test_on_message_artcount_no_params_0.txt  test_on_message_artsearch_0.txt  test_on_message_artsearch_no_list_0.txt  test_on_message_artsearch_no_need_0.txt  test_on_message_artsearch_no_need_with_bad_0.txt  test_on_message_artsearch_with_bad_0.txt  test_on_message_bug_0.txt  test_on_message_bug_1.txt  test_on_message_bug_header_0.txt  test_on_message_bug_search_arriving_0.txt  test_on_message_bug_search_arriving_1.txt  test_on_message_bug_search_leaving_0.txt  test_on_message_bug_search_query_few_0.txt  test_on_message_bug_search_query_many_0.txt  test_on_message_bugs_case_insensitive_0.txt  test_on_message_collect_art_congrats_0.txt  test_on_message_collect_bugs_congrats_0.txt  test_on_message_collect_fish_congrats_0.txt  test_on_message_collect_songs_congrats_0.txt  test_on_message_collectart_0.txt  test_on_message_collectart_1.txt  test_on_message_collectart_2.txt  test_on_message_collectart_congrats_0.txt  test_on_message_collectart_no_list_0.txt  test_on_message_collected_art_congrats_0.txt  test_on_message_collected_fossils_congrats_0.txt  test_on_message_collectedart_no_name_0.txt  test_on_message_collectedart_with_name_0.txt  test_on_message_count_art_0.txt  test_on_message_count_bugs_0.txt  test_on_message_count_fish_0.txt  (+60 more)
turbot/: __init__.py  migrate.py
turbot/data/: art.csv  bugs.csv  fish.csv  fossils.txt  strings.yaml
